...
        @Inject(\.speechService) private var speechService
        private var isTranscribing: Bool = false
        
        private lazy var button: UIButton = {
            let button = UIButton()
            button.tintColor = .gray
            button.accessibilityIdentifier = "SearchBarTranscribeButton"
            button.setImage(UIImage(systemName: "mic.fill"), for: .normal)
            button.addTarget(self, action: #selector(onTap), for: .touchUpInside)
            button.translatesAutoresizingMaskIntoConstraints = false
            return button
        }()
        
...
