...
                Card(title: "Car Driver Side") {
                    HStack(spacing: 4) {
                        Text("LEFT")
                            .font(.system(size: 12))
                            .fontWeight(.medium)
                            .opacity(country.car?.side == "left" ? 1 : 0.1)
                        Image(systemName: "car.circle")
                            .font(.system(size: 20))
                        Text("RIGHT")
                            .font(.system(size: 12))
                            .fontWeight(.medium)
                            .opacity(country.car?.side == "right" ? 1 : 0.1)
                    }
...
